--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 <body>
     <main>
         <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
 
         </section>
 
         <section id="rede-social">
+
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
+
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="git"></a>
+
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="insta"></a>
+
+            <a href="#" target="tela"><img src="imagens/logo-linkedin-square.jpg" style="height: 49vh;" alt="linkedin"></a>
 
         </section>
     </main>
