--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
         <section id="rede-social">
 
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
 
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="git"></a>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="git"></a><br>
 
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="insta"></a>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="insta"></a><br>
 
-            <a href="#" target="tela"><img src="imagens/logo-linkedin-square.jpg" style="height: 49vh;" alt="linkedin"></a>
+            <a href="#" target="_blank"> <img src="imagens/linkedin-wally.jpg" alt="linkedin"></a><br>
 
         </section>
     </main>
