--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <section id="rede-social">
 
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
 
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="git"></a><br>
 
